--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,15 @@
   "files.exclude": {
     "build": true,
     "node_modules": true
-  }
+  },
+  "workbench.colorCustomizations": {
+    "statusBar.background": "#d67ab6",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#ca53a1",
+    "titleBar.activeBackground": "#d67ab6",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#d67ab699",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.color": "#d67ab6"
 }
